// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Answer matches snapshot 1`] = `
.c1 .image-button-wrapper {
  border: none;
  padding: 0;
  margin: 0;
  background: none;
  display: inline-block;
  cursor: pointer;
}

.c1 .image-button-wrapper:focus {
  outline: 1px solid Highlight;
  outline: 1px solid -webkit-focus-ring-color;
  outline-offset: 2px;
}

.c1 .image-button-wrapper img {
  display: block;
  max-width: 100%;
  height: auto;
}

.c0 {
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<div
  className="openstax-answer"
>
  <div
    className="answers-answer"
  >
    <input
      checked={false}
      className="answer-input-box"
      disabled={false}
      id="1-option-1"
      name="1-options"
      onChange={[Function]}
      type="radio"
    />
    <label
      className="answer-label"
      htmlFor="1-option-1"
      onKeyPress={[Function]}
    >
      <span
        aria-hidden="true"
        className="answer-letter-wrapper"
        data-answer-choice="B"
        data-test-id="answer-choice-B"
      />
      <span
        className="c0 answer-choice-label"
      >
        Choice B:
      </span>
      <div
        className="answer-answer"
      >
        <div
          aria-atomic="true"
          aria-live="polite"
          className="answer-indicator-live"
          role="status"
        />
        <span
          className="c1 answer-content"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<ol>
  <li>matter is moving at speeds of less than roughly 1% the speed of light,</li>
  <li>objects are too small to be seen with the naked eye, and</li>
  <li>there is the involvement of only a weak gravitational field</li>
</ol>
",
            }
          }
        />
      </div>
    </label>
  </div>
</div>
`;

exports[`Answer renders a checked answer 1`] = `
.c1 .image-button-wrapper {
  border: none;
  padding: 0;
  margin: 0;
  background: none;
  display: inline-block;
  cursor: pointer;
}

.c1 .image-button-wrapper:focus {
  outline: 1px solid Highlight;
  outline: 1px solid -webkit-focus-ring-color;
  outline-offset: 2px;
}

.c1 .image-button-wrapper img {
  display: block;
  max-width: 100%;
  height: auto;
}

.c0 {
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<div
  className="openstax-answer"
>
  <div
    className="answers-answer answer-selected"
  >
    <input
      checked={true}
      className="answer-input-box"
      disabled={false}
      id="1-option-1"
      name="1-options"
      onChange={[Function]}
      type="radio"
    />
    <label
      className="answer-label"
      htmlFor="1-option-1"
      onKeyPress={[Function]}
    >
      <span
        aria-hidden="true"
        className="answer-letter-wrapper"
        data-answer-choice="B"
        data-test-id="answer-choice-B"
      />
      <span
        className="c0 answer-choice-label"
      >
        Choice B:
      </span>
      <div
        className="answer-answer"
      >
        <div
          aria-atomic="true"
          aria-live="polite"
          className="answer-indicator-live"
          role="status"
        />
        <span
          className="c1 answer-content"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<ol>
  <li>matter is moving at speeds of less than roughly 1% the speed of light,</li>
  <li>objects are too small to be seen with the naked eye, and</li>
  <li>there is the involvement of only a weak gravitational field</li>
</ol>
",
            }
          }
        />
      </div>
    </label>
  </div>
</div>
`;

exports[`Answer renders a correct answer 1`] = `
.c2 .image-button-wrapper {
  border: none;
  padding: 0;
  margin: 0;
  background: none;
  display: inline-block;
  cursor: pointer;
}

.c2 .image-button-wrapper:focus {
  outline: 1px solid Highlight;
  outline: 1px solid -webkit-focus-ring-color;
  outline-offset: 2px;
}

.c2 .image-button-wrapper img {
  display: block;
  max-width: 100%;
  height: auto;
}

.c0 {
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c1 {
  color: #0D7741;
  text-transform: uppercase;
  font-size: calc(1.1rem * var(--content-text-scale,1));
  font-weight: bold;
}

<div
  className="openstax-answer"
>
  <div
    className="answers-answer disabled answer-correct"
  >
    <input
      checked={false}
      className="answer-input-box"
      disabled={true}
      id="1-option-1"
      name="1-options"
      onChange={[Function]}
      type="radio"
    />
    <label
      className="answer-label"
      htmlFor="1-option-1"
      onKeyPress={[Function]}
    >
      <span
        aria-hidden="true"
        className="answer-letter-wrapper"
        data-answer-choice="B"
        data-test-id="answer-choice-B"
      />
      <span
        className="c0 answer-choice-label"
      >
        Choice B:
      </span>
      <div
        className="answer-answer"
      >
        <div
          aria-atomic="true"
          aria-live="polite"
          className="answer-indicator-live"
          role="status"
        >
          <div
            className="c1"
          >
            <span>
              Correct Answer
            </span>
          </div>
        </div>
        <span
          className="c2 answer-content"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<ol>
  <li>matter is moving at speeds of less than roughly 1% the speed of light,</li>
  <li>objects are too small to be seen with the naked eye, and</li>
  <li>there is the involvement of only a weak gravitational field</li>
</ol>
",
            }
          }
        />
      </div>
    </label>
  </div>
</div>
`;

exports[`Answer renders an incorrect answer 1`] = `
.c2 .image-button-wrapper {
  border: none;
  padding: 0;
  margin: 0;
  background: none;
  display: inline-block;
  cursor: pointer;
}

.c2 .image-button-wrapper:focus {
  outline: 1px solid Highlight;
  outline: 1px solid -webkit-focus-ring-color;
  outline-offset: 2px;
}

.c2 .image-button-wrapper img {
  display: block;
  max-width: 100%;
  height: auto;
}

.c0 {
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c1 {
  color: #C22032;
  text-transform: uppercase;
  font-size: calc(1.1rem * var(--content-text-scale,1));
  font-weight: bold;
}

<div
  className="openstax-answer"
>
  <div
    className="answers-answer answer-incorrect"
  >
    <input
      checked={false}
      className="answer-input-box"
      disabled={true}
      id="1-option-1"
      name="1-options"
      onChange={[Function]}
      type="radio"
    />
    <label
      className="answer-label"
      htmlFor="1-option-1"
      onKeyPress={[Function]}
    >
      <span
        aria-hidden="true"
        className="answer-letter-wrapper"
        data-answer-choice="B"
        data-test-id="answer-choice-B"
      />
      <span
        className="c0 answer-choice-label"
      >
        Choice B:
      </span>
      <div
        className="answer-answer"
      >
        <div
          aria-atomic="true"
          aria-live="polite"
          className="answer-indicator-live"
          role="status"
        >
          <div
            className="c1"
          >
            <span>
              Incorrect Answer
            </span>
          </div>
        </div>
        <span
          className="c2 answer-content"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<ol>
  <li>matter is moving at speeds of less than roughly 1% the speed of light,</li>
  <li>objects are too small to be seen with the naked eye, and</li>
  <li>there is the involvement of only a weak gravitational field</li>
</ol>
",
            }
          }
        />
      </div>
    </label>
  </div>
</div>
`;

exports[`Answer renders teacher preview 1`] = `
.c2 .image-button-wrapper {
  border: none;
  padding: 0;
  margin: 0;
  background: none;
  display: inline-block;
  cursor: pointer;
}

.c2 .image-button-wrapper:focus {
  outline: 1px solid Highlight;
  outline: 1px solid -webkit-focus-ring-color;
  outline-offset: 2px;
}

.c2 .image-button-wrapper img {
  display: block;
  max-width: 100%;
  height: auto;
}

.c0 {
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c1 {
  color: #0D7741;
  text-transform: uppercase;
  font-size: calc(1.1rem * var(--content-text-scale,1));
  font-weight: bold;
}

<div
  className="openstax-answer"
>
  <div
    className="answers-answer answer-correct"
  >
    <div
      className="correct-incorrect"
    >
      <span>
        Iconic
      </span>
    </div>
    <input
      checked={false}
      className="answer-input-box"
      disabled={true}
      id="1-option-1"
      name="1-options"
      onChange={[Function]}
      type="radio"
    />
    <label
      className="answer-label"
      htmlFor="1-option-1"
      onKeyPress={[Function]}
    >
      <span
        aria-hidden="true"
        className="answer-letter-wrapper"
        data-answer-choice="B"
        data-test-id="answer-choice-B"
      />
      <span
        className="c0 answer-choice-label"
      >
        Choice B:
      </span>
      <div
        className="answer-answer"
      >
        <div
          aria-atomic="true"
          aria-live="polite"
          className="answer-indicator-live"
          role="status"
        >
          <div
            className="c1"
          >
            <span>
              Correct Answer
            </span>
          </div>
        </div>
        <span
          className="c2 answer-content"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<ol>
  <li>matter is moving at speeds of less than roughly 1% the speed of light,</li>
  <li>objects are too small to be seen with the naked eye, and</li>
  <li>there is the involvement of only a weak gravitational field</li>
</ol>
",
            }
          }
        />
      </div>
    </label>
  </div>
</div>
`;

exports[`Answer renders teacher review 1`] = `
.c0 .image-button-wrapper {
  border: none;
  padding: 0;
  margin: 0;
  background: none;
  display: inline-block;
  cursor: pointer;
}

.c0 .image-button-wrapper:focus {
  outline: 1px solid Highlight;
  outline: 1px solid -webkit-focus-ring-color;
  outline-offset: 2px;
}

.c0 .image-button-wrapper img {
  display: block;
  max-width: 100%;
  height: auto;
}

<div
  className="openstax-answer"
>
  <div
    className="answers-answer"
  >
    <div
      className="review-wrapper"
    >
      <div
        className="review-count red"
      >
        <span
          className="selected-count"
          data-percent="50"
        >
          5
        </span>
        <span
          className="letter red"
        >
          B
        </span>
      </div>
      <div
        className="answer-answer"
      >
        <div
          aria-atomic="true"
          aria-live="polite"
          className="answer-indicator-live"
          role="status"
        />
        <span
          className="c0 answer-content"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<ol>
  <li>matter is moving at speeds of less than roughly 1% the speed of light,</li>
  <li>objects are too small to be seen with the naked eye, and</li>
  <li>there is the involvement of only a weak gravitational field</li>
</ol>
",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Answer renders with a custom renderer if set 1`] = `
.c0 {
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<div
  className="openstax-answer"
>
  <div
    className="answers-answer"
  >
    <input
      checked={false}
      className="answer-input-box"
      disabled={false}
      id="1-option-1"
      name="1-options"
      onChange={[Function]}
      type="radio"
    />
    <label
      className="answer-label"
      htmlFor="1-option-1"
      onKeyPress={[Function]}
    >
      <span
        aria-hidden="true"
        className="answer-letter-wrapper"
        data-answer-choice="B"
        data-test-id="answer-choice-B"
      />
      <span
        className="c0 answer-choice-label"
      >
        Choice B:
      </span>
      <div
        className="answer-answer"
      >
        <div
          aria-atomic="true"
          aria-live="polite"
          className="answer-indicator-live"
          role="status"
        />
        <div
          className="custom-renderer"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<ol>
  <li>matter is moving at speeds of less than roughly 1% the speed of light,</li>
  <li>objects are too small to be seen with the naked eye, and</li>
  <li>there is the involvement of only a weak gravitational field</li>
</ol>
",
            }
          }
        />
      </div>
    </label>
  </div>
</div>
`;
